# apps/api/swagger.json
@@ -246,6 +246,11 @@
             "format": "date-time",
             "description": "First payment date"
           },
+          "endDate": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Last payment date"
+          },
           "interestRate": {
             "type": "number",
             "description": "Annual interest rate"
@@ -268,11 +273,6 @@
           "progressPercentage": {
             "type": "integer",
             "description": "Payment progress percentage (virtual)"
-          },
-          "endDate": {
-            "type": "string",
-            "format": "date-time",
-            "description": "Last payment date (virtual)"
           },
           "nextPaymentDate": {
             "type": "string",
@@ -1052,7 +1052,8 @@
                   "principalAmount",
                   "monthlyPayment",
                   "totalInstallments",
-                  "startDate"
+                  "startDate",
+                  "endDate"
                 ],
                 "properties": {
                   "name": {
@@ -1083,6 +1084,11 @@
                     "type": "string",
                     "format": "date-time",
                     "description": "First payment date"
+                  },
+                  "endDate": {
+                    "type": "string",
+                    "format": "date-time",
+                    "description": "Last payment date"
                   },
                   "interestRate": {
                     "type": "number",
